P2JS: Add debug property (debugCollider).
p2js debug: lazy initialization.

--- a/plugins/extra/p2js/public/locales/en/componentEditors.json
+++ b/plugins/extra/p2js/public/locales/en/componentEditors.json
@@ -5,6 +5,7 @@
     "fixedRotation": "Fixed rotation",
     "offset": "Offset",
     "angle": "Angle",
+    "debugCollider": "debugCollider",
     "shape": "Shape",
     "shapeOptions": {
       "box": "Box",
